--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     height: 100%;
     margin: 0; /*Bez tego był problem z dopasowaniem rozmiaru body do okna*/
     background-color: #C85503;
@@ -17,10 +18,19 @@ header {
     padding: 20px 0;
     background-color: #FAA61D;
     color: #2F91B5;
+    width: 100%;
 }
 
 #title {
     text-align: center;
+    background-color: #D5720C;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 300px;
+    color: #003A87;
+    border-radius: 15px;
 }
 
 #game {
@@ -34,6 +44,8 @@ header {
     justify-content: center;
     gap: 20px;
     background-color: #D5720C;
+    padding: 20px;
+    border-radius: 15px;
 }
 
 #buttons button {
@@ -41,20 +53,29 @@ header {
     height: 145px;
     padding: 0;
     border: none;
+    background-color: #D5720C; /*To jest trochę oszukane, dałem kolor buttona taki sam jak kolor tła, bo nie chciał się stylizować*/
+    border-radius: 15px;
 }
 
 #buttons button img{
     width: 100%;
     height: 100%;
-    background-color: blue;
+    background-color: #72CBDB;
+    border-radius: 35px;
 }
 
 #score-box {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
     /* justify-content: space-between; */
     justify-content: center;
     /* width: 100%; */
-    background-color: #8A2702;
+    background-color: #ffc36a;
+    border: solid 5px #72CBDB;
+    border-radius: 15px;
+    padding: 10px;
 }
 
 #score {
@@ -70,4 +91,5 @@ footer {
     padding: 20px 0;
     background-color: #A03304;
     color: #000368;
+    width: 100%;
 }
